# GeoTool

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat
.github/workflows/: build.yml
src/: main.cpp
tests/: main_tests.cpp
